--- a/public/index.html
+++ b/public/index.html
@@ -372,7 +372,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Casa J.B.R.C.</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p>Dibujos</p><p>Fotografías x S.G.</p><p>Series</p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p><a href="#casaJBRC2">Dibujos</a></p><p><a href="#casaJBRC3">Fotografías x S.G.</a></p><p><a href="#casaJBRC4">Series</a></p></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Una pareja de artistas nos contacta para “acondicionar” una propiedad que están pensando comprar. Al salir de la visita les decimos “La casa tiene mucho ruido. Hace falta crueldad.” El proceso de reconstrucción comenzó siendo una “lavada de cara”, siguió como una “refacción”, se volvió luego una “reforma integral” y culminó en “una casa nueva”. La estrategia fue simple, hacer subir desde el fondo lo que la arquitectura ya era: una casa 3 metros de ancho por un largo de 18 metros, desarrollada en vertical en tres niveles y varios desniveles, con el potencial de volverse un pequeño buque largo, esbelto y alto. Se demolió todo el ruido estilístico e innecesario: molduras, falsas vigas de madera, nichos, muros que sectorizaban los espacios según clichés absurdos, equipamiento no pensado para ser utilizado sino para representar un gusto poco refinado. Cuando solo quedaron las losas y sus desniveles, el patio en el fondo y un invernadero, se introdujo una escalera cuadrada en el medio de la casa que conecte cada uno de los desniveles generando un circuito que conecta espacios aislados con carácter y humores específicos.
@@ -385,7 +385,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><p>Texto</p><p style="text-decoration: underline !important;">Dibujos</p><p>Fotografías x S.G.</p><p>Series</p></div>
+      <div class="guia"><p><a href="#casaJBRC">Texto</a></p><p style="text-decoration: underline !important;">Dibujos</p><p><a href="#casaJBRC3">Fotografías x S.G.</a></p><p><a href="#casaJBRC4">Series</a></p></div>
       <!--<hr>-->
       <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/01.jpg" alt="Image 1">
        <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/02.jpg" alt="Image 1">
@@ -398,7 +398,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><p>Texto</p><p>Dibujos</p><p style="text-decoration: underline !important;">Fotografías x S.G.</p><p>Series</p></div>
+      <div class="guia"><p><a href="#casaJBRC1">Texto</a></p><p><a href="#casaJBRC2">Dibujos</a></p><p style="text-decoration: underline !important;">Fotografías x S.G.</p><p><a href="#casaJBRC4">Series</a></p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/07_casa_freesbee_x_sg/01.jpg" alt="Image 1">
@@ -416,7 +416,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p>Dibujos</p><p>Fotografías x S.G.</p><p style="text-decoration: underline !important;">Series</p></div>
+      <div class="guia"><p><a href="#casaJBRC">Texto</a></p><p><a href="#casaJBRC2">Dibujos</a></p><p><a href="#casaJBRC3">Fotografías x S.G.</a></p><p style="text-decoration: underline !important;">Series</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/06_casa_freesbee_series/01.jpg" alt="Image 1">
