--- a/public/index.html
+++ b/public/index.html
@@ -398,7 +398,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><p><a href="#casaJBRC1">Texto</a></p><p><a href="#casaJBRC2">Dibujos</a></p><p style="text-decoration: underline !important;">Fotografías x S.G.</p><p><a href="#casaJBRC4">Series</a></p></div>
+      <div class="guia"><p><a href="#casaJBRC">Texto</a></p><p><a href="#casaJBRC2">Dibujos</a></p><p style="text-decoration: underline !important;">Fotografías x S.G.</p><p><a href="#casaJBRC4">Series</a></p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/07_casa_freesbee_x_sg/01.jpg" alt="Image 1">
