--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <!--<button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>-->
   <button id="slideBackBottom" type="button" class="arrow-button-l"
         onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" 
-        onmouseleave="stopScrollLeft()" ontouchstart="scrollToPreviousId(event)">
+        onmouseleave="stopScrollLeft()" ontouchstart="scrollToNextId(event)">
 </button>
   <div class="container">
 
@@ -2115,7 +2115,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
  <!-- <button id="slideForwardBottom" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>-->
 <button id="slideForwardBottom" type="button" class="arrow-button-r" 
         onmousedown="startScrollRight()" onmouseup="stopScrollRight()" 
-        onmouseleave="stopScrollRight()" ontouchstart="scrollToNextId(event)">
+        onmouseleave="stopScrollRight()" ontouchstart="scrollToPreviousId(event)">
 </button>
 
 </body>
