--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,8 @@ function stopScrollRight() {
 function scrollToNextId(event) {
   event.preventDefault();
   
-  var currentScroll = document.querySelector(".container").scrollLeft;
+  var container = document.querySelector(".container");
+  var currentScroll = container.scrollLeft;
   var nextElement = null;
   var elements = document.querySelectorAll('.container > *[id]');
 
@@ -98,19 +99,21 @@ function scrollToNextId(event) {
   if (nextElement) {
     nextElement.scrollIntoView({ behavior: 'smooth', block: 'nearest', inline: 'start' });
   }
-} 
+}
 
 // Function to scroll to the previous element with a specific ID on mobile
 function scrollToPreviousId(event) {
   event.preventDefault();
   
-  var currentScroll = document.querySelector(".container").scrollLeft;
+  var container = document.querySelector(".container");
+  var currentScroll = container.scrollLeft;
   var previousElement = null;
   var elements = document.querySelectorAll('.container > *[id]');
 
   for (var i = elements.length - 1; i >= 0; i--) {
     var element = elements[i];
-    if (element.offsetLeft < currentScroll) {
+    // Add a small buffer to the comparison to account for precision issues
+    if (element.offsetLeft + element.offsetWidth < currentScroll) {
       previousElement = element;
       break;
     }
@@ -118,19 +121,23 @@ function scrollToPreviousId(event) {
 
   if (previousElement) {
     previousElement.scrollIntoView({ behavior: 'smooth', block: 'nearest', inline: 'start' });
+  } else {
+    console.log("No previous element found");
   }
 }
 
 // Event listeners for touch events to support mobile devices
-document.getElementById('slideBackBottom').addEventListener('touchstart', scrollToPreviousId);
-document.getElementById('slideBackBottom').addEventListener('mousedown', startScrollLeft);
-document.getElementById('slideBackBottom').addEventListener('mouseup', stopScrollLeft);
-document.getElementById('slideBackBottom').addEventListener('mouseleave', stopScrollLeft);
+document.addEventListener('DOMContentLoaded', function() {
+  document.getElementById('slideBackBottom').addEventListener('touchstart', scrollToPreviousId);
+  document.getElementById('slideBackBottom').addEventListener('mousedown', startScrollLeft);
+  document.getElementById('slideBackBottom').addEventListener('mouseup', stopScrollLeft);
+  document.getElementById('slideBackBottom').addEventListener('mouseleave', stopScrollLeft);
 
-document.getElementById('slideForwardBottom').addEventListener('touchstart', scrollToNextId);
-document.getElementById('slideForwardBottom').addEventListener('mousedown', startScrollRight);
-document.getElementById('slideForwardBottom').addEventListener('mouseup', stopScrollRight);
-document.getElementById('slideForwardBottom').addEventListener('mouseleave', stopScrollRight);
+  document.getElementById('slideForwardBottom').addEventListener('touchstart', scrollToNextId);
+  document.getElementById('slideForwardBottom').addEventListener('mousedown', startScrollRight);
+  document.getElementById('slideForwardBottom').addEventListener('mouseup', stopScrollRight);
+  document.getElementById('slideForwardBottom').addEventListener('mouseleave', stopScrollRight);
+});
 
 document.addEventListener("DOMContentLoaded", function() {
     // Function to detect if the device is mobile
