--- a/public/index.html
+++ b/public/index.html
@@ -463,7 +463,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Casa F.G.</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p>Dibujos</p><p>Fotografías</p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#casaFG2"><p>Dibujos</p></a><a href="#casaFG3"><p>Fotografías</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Un artista precisa una casa lo más pequeña posible. Quiere vivir en ella, pero también utilizarla como espacio de producción. La relación con la intemperie propone, tiene que ser más propia de quién la conoce y trabaja en ella que de quien la idealiza y la contempla. La casa se divide en tres bandas: un pasillo extra-grande central que además de conectar con las dos bandas laterales y permitir atravesar desde la galería de la entrada al lavadero del fondo, suceden las actividades de producción y de ocio. Una banda lateral ancha conforma una secuencia de habitaciones: cocina, baño, ducha, depósito, dormitorio. Cada habitación tiene una ventana hacia el exterior y una puerta hacia la banda central, con excepción del dormitorio: una puerta para cada lado de la cama permite maximizar el espacio. En la banda lateral angosta se forma una secuencia de nichos para equipamiento, intercalados por grandes ventanales que funcionan como pantallas que proyectan el jardín desde fuera.  </p>
@@ -475,7 +475,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p style="text-decoration: underline !important;">Dibujos</p><p>Fotografías</p></div>
+      <div class="guia"><a href="#casaFG"><p>Texto</p></a><p style="text-decoration: underline !important;">Dibujos</p><a href="#casaFG3"><p>Fotografías</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/09_casa gully_planos de arquitectura/01.jpg" alt="Image 1">
@@ -486,7 +486,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p>Dibujos</p><p style="text-decoration: underline !important;">Fotografías</p></div>
+      <div class="guia"><a href="#casaFG"><p>Texto</p></a><a href="#casaFG2"><p>Dibujos</p></a><p style="text-decoration: underline !important;">Fotografías</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/09_casa gully_fotos/1.jpg" alt="Image 1">
@@ -508,7 +508,8 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Cute-chitecture</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Arquitectura Póstuma</p><p>Cenotafios</p><p>Puentes</p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Imágenes 1</p><a href="#cute2"><p>Imágenes 2</p></a><a href="#cute3"><p>Imágenes 3</p></a></div>
+      <p>Arquitectura Póstuma</p>
       <!--<br>-->
       <!--<hr>-->
       <p>Una arquitectura sensual pero no en el sentido hedonista; sensorial pero no en el sentido de tacto, gusto, olfato…; atmosférica pero no en el sentido del aire o la temperatura….; materialmente heterogénea pero no ecléctica o desagregada; útil y funcional pero no utilitaria ni instrumentalizada; programáticamente específica pero no hiperdeterminada; abierta pero no indeterminada o flexible; una arquitectura de la sensación en la que la dicotomía espacio-tiempo es superada para crear un mundo en sí mismo, sin resolución, sin reconciliación, sin sublimación: un desbarate de todos los sentidos confundidos unos en otros. Arquitectura tierna, sensible, sin caer en la violencia del snobismo ni de la normalización, solo posibles mediante desapegos, evasiones de cualquier sentido trágico de la práctica de arquitectura, en definitiva, una arquitectura amorosa sin miedo a la muerte.</p>
@@ -518,7 +519,8 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><p>Arquitectura Póstuma</p><p style="text-decoration: underline !important;">Cenotafios</p><p>Puentes</p></div>
+      <div class="guia"><a href="#cute"><p>Imágenes 1</p></a><p style="text-decoration: underline !important;">Imágenes 2</p><a href="#cute3"><p>Imágenes 3</p></a></div>
+      <p>Cenotafios</p>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="/assets/img/04_cenotafios_fotos/01.jpg" alt="Image 1">
@@ -552,7 +554,8 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><p>Arquitectura Póstuma</p><p>Cenotafios</p><p style="text-decoration: underline !important;">Puentes</p></div>
+      <div class="guia"><a href="#cute"><p>Imágenes 1</p></a><a href="#cute2"><p>Imágenes 2</p></a><p style="text-decoration: underline !important;">Imágenes 3</p></div>
+      <p>Puentes</p>
       <!--<br>-->
          <!--<hr>-->
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/05.jpg" alt="Image 1"> 
@@ -591,7 +594,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Edificio S.C.W.</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p>Dibujos</p><p>Imágenes</p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#edificioSCW2"><p>Dibujos</p></a><a href="#edificioSCW3"><p>Imágenes</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Las musas de un arquitecto son la proyección irracional que puede hacer en sus clientes. Así como un retratista hace visibles al pintar las fuerzas invisibles que están en juego en el rostro de su modelo, un arquitecto espacializa las fuerzas abstractas que están juego en un encargo cualquiera. En ese sentido, su relación con el programa no es científica, ni hermenéutica, ni interpretativa, ni servicial, es más el arte de un médium que se vacía para poder captar los espectros circundantes. En ese sentido, el código de la Ciudad de Buenos Aires y el mercado inmobiliario son los espectros y restricciones dentro de los cuales este proyecto encuentra, por presión como un diamante, no su libertad sino que sus pequeñas salidas hacia adelante.</p>
@@ -603,7 +606,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><p>Texto</p><p style="text-decoration: underline !important;">Dibujos</p><p>Imágenes</p></div>
+      <div class="guia"><a href="#edificioSCW"><p>Texto</p></a><p style="text-decoration: underline !important;">Dibujos</p><a href="#edificioSCW3"><p>Imágenes</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/32_edificio/02.jpg" alt="Image 1">
@@ -616,7 +619,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p>Dibujos</p><p style="text-decoration: underline !important;">Imágenes</p></div>
+      <div class="guia"><a href="#edificioSCW"><p>Texto</p></a><a href="#edificioSCW2"><p>Dibujos</p></a><p style="text-decoration: underline !important;">Imágenes</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/32_edificio/01.jpg" alt="Image 1">
@@ -669,7 +672,7 @@ Maecenas nec lobortis nunc. </p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Casa F.K.L.</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p>Dibujos</p><p>Fotografías</p><p>Videos</p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#casaFKL2"><p>Dibujos</p></a><a href="#casaFKL3"><p>Fotografías</p></a><a href="#casaFKL4"><p>Videos</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <p>En toda arquitectura a reformar está el desafío de construir cada vez los criterios mediante los cuales se distingue lo valioso de lo dispensable. Una reforma en ese sentido es un simulacro explícito de lo que sucede en la práctica en general. La casa F.K.L es un edificio ubicado en una zona de Buenos Aires que tuvo su época dorada y pretende recuperarla. El criterio de una belle epoque no melancólica se vuelve central para la propuesta.</p>
@@ -681,7 +684,7 @@ Maecenas nec lobortis nunc. </p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p style="text-decoration: underline !important;">Dibujos</p><p>Fotografías</p><p>Videos</p></div>
+      <div class="guia"><a href="#casaFKL"><p>Texto</p></a><p style="text-decoration: underline !important;">Dibujos</p><a href="#casaFKL3"><p>Fotografías</p></a><a href="#casaFKL4"><p>Videos</p></a></div>
       <!--<br>-->
   <!--<hr>-->
   <img loading="lazy" src="assets/img/34_avenida de mayo/01.jpg" alt="Image 1">
@@ -692,7 +695,7 @@ Maecenas nec lobortis nunc. </p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p>Dibujos</p><p style="text-decoration: underline !important;">Fotografías</p><p>Videos</p></div>
+      <div class="guia"><a href="#casaFKL"><p>Texto</p></a><a href="#casaFKL2"><p>Dibujos</p></a><p style="text-decoration: underline !important;">Fotografías</p></a><a href="#casaFKL4"><p>Videos</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/34_avenida de mayo/07.jpg" alt="Image 1">
@@ -708,7 +711,7 @@ Maecenas nec lobortis nunc. </p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p>Dibujos</p><p>Fotografías</p><p style="text-decoration: underline !important;">Videos</p></div>
+      <div class="guia"><a href="#casaFKL"><p>Texto</p></a><a href="#casaFKL2"><p>Dibujos</p></a><a href="#casaFKL3"><p>Fotografías</p></a><p style="text-decoration: underline !important;">Videos</p></div>
       <!--<br>-->
       <!--<hr>-->
   <video autoplay muted="muted" loop poster="assets/img/34_avenida de mayo/03.png" src="assets/img/34_avenida de mayo/03.mp4" alt="Video 1"></video>    
@@ -853,7 +856,7 @@ In Front of a Nightclub<br>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Erewhon</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p>Proposiciones</p><p>Dibujos</p><p>Imágenes</p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#erewhon2"><p>Proposiciones</p></a><a href="#erewhon3"><p>Dibujos</p></a><a href="#erewhon4"><p>Imágenes</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Un laberinto ordenado creado por pares de escaleras opuestas que parten de un mismo centro, proliferan de dos en dos y cambian de dirección creando un recorrido cambiante pero reconocible. A su vez, cada línea de escaleras se abre en dos y se pliega en una segunda escalera espejada que vuelve al centro de partida. Los escalones de las escaleras superiores tiemblan, se acumulan en los extremos y se conectan formando arcos de altura y sección variable. De las escaleras inferiores surgen arcos seguidos de columnas dirigidas hacia el plano límite inferior. Los escalones prolongan progresivamente su profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviéndose a la vez descanso y último escalón.</p>
@@ -867,7 +870,7 @@ In Front of a Nightclub<br>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p style="text-decoration: underline !important;">Proposiciones</p><p>Dibujos</p><p>Imágenes</p></div>
+      <div class="guia"><a href="#erewhon"><p>Texto</p></a><p style="text-decoration: underline !important;">Proposiciones</p><a href="#erewhon3"><p>Dibujos</p></a><a href="#erewhon4"><p>Imágenes</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <b><p>StaGGer</p></b>
@@ -896,7 +899,7 @@ shaping spatial <u>profusion</u>.</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p>Proposiciones</p><p style="text-decoration: underline !important;">Dibujos</p><p>Imágenes</p></div>
+      <div class="guia"><a href="#erewhon"><p>Texto</p></a><a href="#erewhon2"><p>Proposiciones</p></a><p style="text-decoration: underline !important;">Dibujos</p><a href="#erewhon4"><p>Imágenes</p></a></div>
       <!--<br>-->
       <!--<hr>-->
       <b><p>StaGGer</p></b>
@@ -918,7 +921,7 @@ shaping spatial <u>profusion</u>.</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p>Texto</p><p>Proposiciones</p><p>Dibujos</p><p style="text-decoration: underline !important;">Imágenes</p></div>
+      <div class="guia"><a href="#erewhon"><p>Texto</p></a><a href="#erewhon2"><p>Proposiciones</p></a><a href="#erewhon3"><p>Dibujos</p></a><p style="text-decoration: underline !important;">Imágenes</p></div>
       <!--<br>-->
       <!--<hr>-->
       <b><p>StaGGer</p></b>
@@ -1021,7 +1024,8 @@ shaping spatial <u>profusion</u>.</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>MothershipTheatre</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Thesis for an Opaque Architecture</p><p>Imágenes</p><p>Videos</p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#mothership2"><p>Imágenes</p></a><a href="#mothership3"><p>Videos</p></a></div>
+      <p>Thesis for an Opaque Architecture</p>
       <!--<br>-->
       <!--<hr>-->
     <p><b>Thesis 01</b> <br>
@@ -1060,7 +1064,8 @@ In Miesian clearspan floor and ceiling are two hovering, apparently uninterrupte
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><p>Thesis for an Opaque Architecture</p><p style="text-decoration: underline !important;">Imágenes</p><p>Videos</p></div>
+      <div class="guia"><a href="#mothership"><p>Texto</p></a><p style="text-decoration: underline !important;">Imágenes</p><a href="#mothership3"><p>Videos</p></a></div>
+      <p>Thesis for an Opaque Architecture</p>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/15_lab jesse reiser/01.jpg" alt="Image 1">
@@ -1078,7 +1083,8 @@ In Miesian clearspan floor and ceiling are two hovering, apparently uninterrupte
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><p>Thesis for an Opaque Architecture</p><p>Imágenes</p><p style="text-decoration: underline !important;">Videos</p></div>
+      <div class="guia"><a href="#mothership"><p>Texto</p></a><a href="#mothership2"><p>Imágenes</p></a><p style="text-decoration: underline !important;">Videos</p></div>
+      <p>Thesis for an Opaque Architecture</p>
       <!--<br>-->
       <!--<hr>-->
       <video autoplay muted="muted" loop poster="assets/img/16_lab jesse reiser video/01.png" src="assets/img/16_lab jesse reiser video/01.mp4" alt="Video 1"></video>   
@@ -2200,7 +2206,7 @@ let scrolling;
 function startScrolling(column) {
     scrolling = setInterval(() => {
         column.scrollBy({
-            top: 10,
+            top: 20,
             behavior: 'smooth'
         });
     }, 10); // Adjust the interval for smoother or faster scrolling
