--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -191,7 +191,7 @@ document.addEventListener("DOMContentLoaded", function() {
       <p style="margin-bottom: -10px"><a href="#creciendo">Growing Up in Public </a></p> <!--<br> <a href="#creciendo"> Newsletter Errático</a>-->
       <p style="margin-bottom: -10px"><a href="#erewhon">Erewhon </a></p> <!--<br> <a href="#erewhon"> Textos</a> <br><a href="#erewhon2"> Proposiciones</a> <br><a href="#erewhon3"> Dibujos </a> <br><a href="#erewhon4"> Imágenes</a>-->
       <p style="margin-bottom: -10px"><a href="#personajismo">Personaeism</a></p> <!--<br> <a href="#personajismo">Del Arquitecto-Estrella al Arquitecto-Constelación</a>-->
-      <p style="margin-bottom: -10px"><a href="#MPV">Walls, Doors, and Holes </a></p><!--<br>  <a href="#MPV"> Hacia un Minimalismo Explosivo</a>-->
+      <p style="margin-bottom: -10px"><a href="#MPV">Walls, Holes, and Doors</a></p><!--<br>  <a href="#MPV"> Hacia un Minimalismo Explosivo</a>-->
       <p style="margin-bottom: -10px"><a href="#mothership">MothershipTheatre </a></p> <!--<br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  -->
       <p style="margin-bottom: -10px"><a href="#sinEstado">Stateless Architecture </a></p> <!--<br>  <a href="#sinEstado">  Albergues para Multitudes</a> <br><a href="#sinEstado2"> Multitudes en Movimiento </a> <br><a href="#sinEstado3"> Modelos </a> <br><a href="#sinEstado4"> Dibujos </a> -->
       <p style="margin-bottom: -10px"><a href="#singular">Singular 00 </a></p><!--<br> <a href="#singular"> Proposición</a>-->
