--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -179,7 +179,7 @@ document.addEventListener("DOMContentLoaded", function() {
       <p style="margin-bottom: 110px">Buenos Aires, Argentina</p>
       <p style="margin-bottom: -13px"><a href="/">ES  </a><a style="font-weight: bold !important;" href="/index_EN.html">  EN</a></p>
       <!--<br>-->
-      <h3>Índice</h3>
+      <h3>Index</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
       <p style="margin-bottom: -10px"><a href="#casaERCP">Drapes</a></p><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
       <p style="margin-bottom: -10px"><a href="#casaJBRC">Tanker</a></p><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
